force-app/main/default/objects/COGS_Volume__c/COGS_Volume__c.object-meta.xml
<CustomObject>
    <label>COGS Volume</label>
    <nameField>
        <label>COGS Volume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COGS Volumes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>