force-app/main/default/objects/COGS_Volume__c/fields/COGS_Category_Scenario__c.field-meta.xml
<CustomField>
    <fullName>COGS_Category_Scenario__c</fullName>
    <label>COGS Category Scenario</label>
    <referenceTo>COGS_Category_Scenario__c</referenceTo>
    <relationshipLabel>COGS Volumes</relationshipLabel>
    <relationshipName>COGS_Volumes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>