force-app/main/default/objects/COGS_Volume__c/fields/COGS_Quarter__c.field-meta.xml
<CustomField>
    <fullName>COGS_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COGS Quarter</label>
    <referenceTo>COGS_Quarter__c</referenceTo>
    <relationshipLabel>COGS Volumes</relationshipLabel>
    <relationshipName>COGS_Volumes</relationshipName>
    <type>Lookup</type>
</CustomField>