force-app/main/default/objects/COGS_Volume__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Field to enter notes/comments on a certain volume prediction</description>
    <inlineHelpText>Field to enter notes/comments on a certain volume prediction</inlineHelpText>
    <label>Comment</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>