force-app/main/default/objects/COGS_Volume__c/fields/Volume_Type__c.field-meta.xml
<CustomField>
    <fullName>Volume_Type__c</fullName>
    <description>Type of volume information that defines the source. E.g. derived from budget, derived from opportunities or manual entries</description>
    <inlineHelpText>Type of volume information that defines the source. E.g. derived from budget, derived from opportunities or manual entries</inlineHelpText>
    <label>Volume Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>