force-app/main/default/objects/COGS_Volume__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>COGS_Quarter__c</columns>
    <columns>NAME</columns>
    <columns>Volume__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>